--- a/assets/css/default-theme.css
+++ b/assets/css/default-theme.css
@@ -1,4 +1,3 @@
-
 #white{
   color:white;
 }
@@ -41,146 +40,11 @@
   }
   
   h1{
-    color: white;
+    color: yellow; /* changed from white */
   }
-  h2{
-    color: red;
-  }
-  p1{
-    color:grey;
-    Background-color:Black;
-    font-family: "Times New Roman", Times, serif;
-  }
-  p{
-    color:grey;
-    Background-color:Black;
-    font-family: "Times New Roman", Times, serif;
-  }
-
-  
-  
-  
-  .submit-button {
-      background: transparent;
-      border: none;
-      width: 55px;
-      height: 60px;
-      color: white;
-    margin-left:5px;
-  }
-  
-  
   
   body {
-    margin: 0;
-}
-
-#space {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #000;
-    z-index: -1;
-}
-
-.star {
-    position: absolute;
-    background-color: #fff;
-    border-radius: 50%;
-    animation: twinkling 5s infinite, moving linear 20s infinite;
-}
-
-@keyframes twinkling {
-    0% {
-        opacity: 0.4;
-    }
-    50% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 0.4;
-    }
-}
-
-@keyframes moving {
-    0% {
-        transform: translateX(0);
-    }
-    100% {
-        transform: translateX(100%);
-    }
-}
-
-#content-container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #fff;
-    text-align: center;
-}
-
-.nav-links {
-  list-style-type: none;
-  display: flex;
-  gap: 20px;
-}
-
-.nav-links li a {
-  text-decoration: none;
-  color: #fff; 
-  padding: 10px 15px; 
-  border-radius: 5px; 
-  font-size: 18px; 
-  position: relative; 
-  transition: color 0.3s ease; /* i cant gurantee that chat gpt didnt help */
-}
-
-/* New hover effect */
-.nav-links li a::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  bottom: 0;
-  left: 0;
-  background-color: #0077b6; 
-  transform: scaleX(0); 
-  transform-origin: right;
-  transition: transform 0.3s ease; 
-}
-
-.nav-links li a:hover::before {
-  transform: scaleX(1); /* scale thing on hover */
-}
-  .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
-}
-
-.logo {
-  font-size: 32px;
-  font-weight: bold; 
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); 
-  color:white;
-}
-
-  .navbar {
-    background-color:black; 
-    color: #fff; 
-    padding: 10px 0;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2); /* Add a subtle shadow */
-  }
-  .main {
-    padding: 16px;
-    margin-top: 30px;
-    height: 1500px; 
+    background-color: purple; /* changed from black */
   }
   
-  
+
